--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -17,7 +17,7 @@ layout: default
               <h2>{{ item.title }}</h2>
             </header>
             {% if item.video %}
-              <iframe width="100%" src="https://www.youtube.com/embed/S4cMiG41cFo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <iframe width="100%" height="350" src="{{ item.youtube_url }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             {% else %}
               {% if item.image_path %}
                 <figure>
