--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,10 @@ layout: default
     <h1>{{ page.title }}</h1>
   </header>
   <div class="post-full-page-image-wrap">
-    <img src="{{ page.image_path }}" alt="{{ page.title }}" class="post-image">
+    <a href="{{ page.image_path }}" class="event-image-enlarge">
+      <img src="{{ page.image_path }}" alt="{{ page.title }}" class="post-image" />
+      <div class="event-image-enlarge-caption">Click to enlarge</div>
+    </a>
   </div>
   <section class="content-area post-content-text">{{ content }}</section>
   {% include social.html %}
