--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -9,29 +9,32 @@ layout: page
 <!-- <div class="post-page-split-wrap">
   <div class="post-page-left"> -->
 <section class="events posts-area page-content-area">
-  {% assign posts = site.articles | where: 'published', 'true' | sort: 'event_date' %} {% for post in posts %} {% if site.time
-  < post.event_date %} <a href="{{ post.permalink }}">
-    <article class="post page-content-item floating-image-container">
-      <header class="post-header page-content-header">
-        <h4 class="post-title">{{ post.title }}</h4>
-      </header>
-      <figure class="post-image-wrap">
-        <img src="{{ post.image_path }}" alt="{{ post.title }}" class="post-image">
-        <figcaption class="post-description-wrap">
-          <p class="description post-description">{{ post.description }}</p>
-        </figcaption>
-      </figure>
-      <footer class="post-footer">
-        <ul class="tag-wrap horizontal-tag-list">
-          {% for tag in post.tags %}
-          <li class="tag">{{ tag }}</li>
-          {% endfor %}
-        </ul>
-        <div class="post-date">Date: {{ post.event_date | date: '%B %d, %Y' }}</div>
-      </footer>
-    </article>
-    </a>
-    {% endif %} {% endfor %}
+  {% assign posts = site.articles | where: 'published', 'true' | sort: 'event_date' %}
+  {% for post in posts %}
+    {% if site.time < post.event_date %}
+      <a href="{{ post.permalink }}">
+        <article class="post page-content-item floating-image-container">
+          <header class="post-header page-content-header">
+            <h4 class="post-title">{{ post.title }}</h4>
+          </header>
+          <figure class="post-image-wrap">
+            <img src="{{ post.image_path }}" alt="{{ post.title }}" class="post-image">
+            <figcaption class="post-description-wrap">
+              <p class="description post-description">{{ post.description }}</p>
+            </figcaption>
+          </figure>
+          <footer class="post-footer">
+            <ul class="tag-wrap horizontal-tag-list">
+              {% for tag in post.tags %}
+                <li class="tag">{{ tag }}</li>
+              {% endfor %}
+            </ul>
+            <div class="post-date">Date: {{ post.event_date | date: '%B %d, %Y' }}</div>
+          </footer>
+        </article>
+      </a>
+    {% endif %}
+  {% endfor %}
 </section>
 <!-- </div>
   <div class="post-page-right">
